--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "http-status": "^1.4.2",
     "log4js": "^6.3.0",
     "method-override": "^3.0.0",
-    "morgan": "~1.10.0",
-    "sequelize": "^6.3.5"
+    "mongoose": "^5.10.11",
+    "morgan": "~1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
