--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
     "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
@@ -19,10 +20,14 @@
     "express": "~4.17.1",
     "express-status-monitor": "^1.3.3",
     "http-status": "^1.4.2",
+    "joi": "^17.3.0",
     "log4js": "^6.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.11",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "pm2": "^4.5.0",
+    "pm2-logrotate": "^2.7.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
